--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,40 +1,10 @@
 pipeline {
          agent any
          stages {
-                 stage('One') {
-                 steps {
-                     echo 'Hi, this is Zulaikha from edureka'
+                 stage {
+                  steps {
+                    sh 'echo hello_mouni'
+                  }
                  }
-                 }
-                 stage('Two') {
-                 steps {
-                    input('Do you want to proceed?')
-                 }
-                 }
-                 stage('Three') {
-                 when {
-                       not {
-                            branch "master"
-                       }
-                 }
-                 steps {
-                       echo "Hello"
-                 }
-                 }
-                 stage('Four') {
-                 parallel {
-                            stage('Unit Test') {
-                           steps {
-                                echo "Running the unit test..."
-                           }
-                           }
-                            stage('Integration test') {
-                              steps{
-                                echo "Hii, This is Mounika"
-                              }
-                              
-                           }
-                           }
-                           }
               }
 }
